force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/CommercientSF__ArCustomerPlus__c.object-meta.xml
<CustomObject>
    <label>Syspro Customer Record Plus</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Customer Record Pluss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>