force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__County__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__County__c</fullName>
    <description>County</description>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>