force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__Customer__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Customer__c</fullName>
    <description>Customer</description>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>