force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustomerType__c</fullName>
    <description>CustomerType</description>
    <label>CustomerType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>