force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__DateFirstSale__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateFirstSale__c</fullName>
    <description>DateFirstSale</description>
    <label>DateFirstSale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>