force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__DateOfFirstSale__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateOfFirstSale__c</fullName>
    <description>DateOfFirstSale</description>
    <label>DateOfFirstSale</label>
    <type>DateTime</type>
</CustomField>