force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__ExistingCustomer__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExistingCustomer__c</fullName>
    <description>ExistingCustomer</description>
    <label>ExistingCustomer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>