force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__LeadSource__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LeadSource__c</fullName>
    <description>LeadSource</description>
    <label>LeadSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>