force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__OrSalesOrder1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrSalesOrder1__c</fullName>
    <description>OrSalesOrder1</description>
    <label>OrSalesOrder1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>