force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__OrSalesOrder2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrSalesOrder2__c</fullName>
    <description>OrSalesOrder2</description>
    <label>OrSalesOrder2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>