force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__OrSalesOrder3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrSalesOrder3__c</fullName>
    <description>OrSalesOrder3</description>
    <label>OrSalesOrder3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>