force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__SalesTeamMembershi__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesTeamMembershi__c</fullName>
    <description>SalesTeamMembershi</description>
    <label>SalesTeamMembershi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>