force-app/main/default/objects/CommercientSF__ArCustomerPlus__c/fields/CommercientSF__TouchInterval__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TouchInterval__c</fullName>
    <description>TouchInterval</description>
    <label>TouchInterval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>